# FidoAuth

./: .pylintrc  LICENSE  README.md  fidoauth.wsgi  pyproject.toml
src/fidoauth/: cmd.py  common.py  config.py  server.py  wsgi.py
src/fidoauth/config/: default.cfg
src/fidoauth/plugins/: base.py  password.py  unifi.py
src/fidoauth/templates/: authenticate.html.j2  error.html.j2  login.html.j2  register.html.j2  registration.html.j2
test/: mock_device.py  test_registration.py
